added a new page called after graduation plans and changed the color of the body to blood red and the text to white.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
         Programming Lab. Some of my interests include gaming, 
         reading, working out with Calisthenics and extracurriculars
         such as Archery and Marching Band. 
+        <br>
+        The games that I enjoy playing the most are single player/multiplayer exploration games.
+        These games include Assassin's Creed, Borderlands, Diablo, and Minecraft. Meanwhile, the 
+        books I like reading are mostly fantasy. For example, these include the Harry Potter series,
+        Fablehaven series, and the Mortal Instruments series.
     </p>
+
 </body>
 
 </html>
