Almost finished the information for the Games page

--- a/after_graduation_plans.html
+++ b/after_graduation_plans.html
@@ -21,7 +21,9 @@
     <h2>My Plans After Graduation</h2>
 
     <p>
-        
+        After graduation I plan to head to Missouri Western to major in Computer Science and a minor in Cyber Security while living with my father. I plan to get some kind of
+        computer related job while there in college to have some sort of income based off all the certifications I will get here in Four County and my knowledge gained from college.
+        <!-- Might add some images of Missouri Western and St. Joseph -->
     </p>
 
 </body>
