--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         Four County Career Center as a Senior in the Computer 
         Programming Lab. Some of my interests include gaming, 
         reading, working out with Calisthenics and extracurriculars
-        such as Archery and Marching Band. 
+        such as Archery and Marching Band. If im not at home playing games or reading im usually out with my friends watching a new movie that just came out that peaked our interest.
         <br>
         The games that I enjoy playing the most are single player/multiplayer exploration games.
-        These games include Assassin's Creed, Borderlands, Diablo, and Minecraft. Meanwhile, the 
-        books I like reading are mostly fantasy. For example, these include the Harry Potter series,
+        These games include Assassin's Creed, Borderlands, Diablo, Final Fantasy, and Minecraft. Most Tv shows and movies that I watch are Marvel or DC oriented. However I do like to
+        watch other movies that peak my interests. The books I like reading are mostly fantasy. For example, these include the Harry Potter series,
         Fablehaven series, and the Mortal Instruments series.
     </p>
 
