--- a/games.html
+++ b/games.html
@@ -12,7 +12,6 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="tvshows_and_movies.html">Tv Shows/Movies</a></li>
         <li><a href="games.html">Games</a></li>
-        <li><a href="extracurriculars.html">Extracurriculars</a></li>
         <li><a href="after_graduation_plans.html">After Graduation Plans</a></li>
     </ul>
 </nav>
@@ -24,19 +23,25 @@
 
     <p>
         
-        As you probably read from my intro page I like the game series Assassin's Creed, Final Fantasy, Diablo, Borderlands and the game Minecraft. With each of these franchises there aren't many of the games
+        As you probably read from my intro page I like the game series 
+        <a href="https://assassinscreed.fandom.com/wiki/Assassin%27s_Creed_Wiki">Assassin's Creed</a>, 
+        <a href="https://finalfantasy.fandom.com/wiki/Final_Fantasy_Wiki">Final Fantasy</a>, 
+        <a href="https://diablo.fandom.com/wiki/Diablo_(Series)">Diablo</a>, 
+        <a href="https://borderlands.fandom.com/wiki/Borderlands_Wiki">Borderlands</a>, 
+        and the game <a href="https://minecraft.fandom.com/wiki/Minecraft_Wiki">Minecraft</a>. 
+        With each of these franchises there aren't many of the games
         among them that I dislike. However, my least favorites would probably consist of Mirage from the Assassin's Creed franchise, The original Borderlands, Diablo 2 from the Diablo franchise,
         and Final Fantasy 2 from the Final Fantasy Franchise. However there are many other games that I enjoy playing such as
 
         <ul>
-            <li>Clair Obsur: Expedition 33</li>
-            <li>Lies of P</li>
-            <li>Elden Ring Nightreign</li>
-            <li>Risk of Rain 2</li>
-            <li>Deadzone Rogue</li>
-            <li>Stardew Valley</li>
-            <li>Supermarket Simulator</li>
-            <li>Bloons TD 6</li>
+            <li><a href="https://clair-obscur.fandom.com/wiki/Expedition_33">Clair Obsur: Expedition 33</a></li>
+            <li><a href="https://lies-of-p.fandom.com/wiki/Lies_of_P">Lies of P</a></li>
+            <li><a href="https://eldenring.fandom.com/wiki/Elden_Ring_Nightreign">Elden Ring Nightreign</a></li>
+            <li><a href="https://riskofrain2.fandom.com/wiki/Risk_of_Rain_2_Wiki">Risk of Rain 2</a></li>
+            <li><a href="https://wiki.tribesdepot.com/wiki/Deadzone:_Rogue">Deadzone Rogue</a></li>
+            <li><a href="https://stardewvalley.fandom.com/wiki/Stardew_Valley_Wiki">Stardew Valley</a></li>
+            <li><a href="https://supermarket-simulator.fandom.com/wiki/Supermarket_Simulator">Supermarket Simulator</a></li>
+            <li><a href="https://bloons.fandom.com/wiki/Bloons_TD_6">Bloons TD 6</a></li>
         </ul>
 
         Those are just my favorites of the other games that I play.
@@ -51,12 +56,15 @@
 
         <ul>
             <li>Final Fantasy 7: Cloud, Ex-Soldier</li>
-            <li>Gimball</li>
-            <li>Eowyn</li>
-            <li>Rin and Seri, Inseperable</li>
-            <li>Szarel</li>
-            <li>Rick</li>
-
+            <li>Gimbal, Gremlin Prodigy</li>
+            <li>Eowyn, Shieldmaiden</li>
+            <li>Rin and Seri, Inseparable</li>
+            <li>Szarel, Genesis Shepherd</li>
+            <li>Rick, Steadfast Leader</li>
+            <li>Carth the Lion(W.I.P)</li>
+            <li>Ezio Auditore(W.I.P)</li>
+            <li>Tyvar the Bellicose(W.I.P)</li>
+            <li>Kellan, the Kid(W.I.P)</li>
         </ul>
     </p>
 
