--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="tvshows_and_movies.html">Tv Shows/Movies</a></li>
         <li><a href="games.html">Games</a></li>
-        <li><a href="extracurriculars.html">Extracurriculars</a></li>
         <li><a href="after_graduation_plans.html">After Graduation Plans</a></li>
     </ul>
 </nav>
@@ -22,7 +21,7 @@
     <h2>About Me</h2>
 
     <p>
-        Hello, my name is Jason Lincoln and I am currently attending
+        Hello, I am currently attending
         Four County Career Center as a Senior in the Computer 
         Programming Lab. Some of my interests include gaming, 
         reading, working out with Calisthenics and extracurriculars
