finished base customization and organization

--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
 </head>
 
 <nav>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="tvshows_and_movies.html">Tv Shows/Movies</a></li>
-        <li><a href="games.html">Games</a></li>
-        <li><a href="after_graduation_plans.html">After Graduation Plans</a></li>
+    <ul class = "navbar">
+        <li class = "navbar_entry"><a href="index.html">Home</a></li>
+        <li class = "navbar_entry"><a href="tvshows_and_movies.html">Tv Shows/Movies</a></li>
+        <li class = "navbar_entry"><a href="games.html">Games</a></li>
+        <li class = "navbar_entry"><a href="after_graduation_plans.html">After Graduation Plans</a></li>
     </ul>
 </nav>
 
 <body>
+    <h2 class="main-page-main-header">About Me</h2>
+    <div class = "flex-box-container">
 
-    <h2>About Me</h2>
 
-    <p>
+
+    
         Hello, I am currently attending
         Four County Career Center as a Senior in the Computer 
         Programming Lab. Some of my interests include gaming, 
@@ -31,8 +33,8 @@
         These games include Assassin's Creed, Borderlands, Diablo, Final Fantasy, and Minecraft. Most Tv shows and movies that I watch are Marvel or DC oriented. However I do like to
         watch other movies that peak my interests. The books I like reading are mostly fantasy. For example, these include the Harry Potter series,
         Fablehaven series, and the Mortal Instruments series.
-    </p>
 
+    </div>
 </body>
 
 </html>
